@@ -2392,6 +2392,7 @@
 1) kernel: mips: barrier: add definitions of SYNC stype values.<br>
 2) kernel: mips: c-r4k: fix size calc when avoiding IPIs for small icache flushes.<br>
 3) kernel: net: packet: tx timestamping on tpacket ring.<br>
+4) kernel: net: socket: move ktime2ts to ktime header api.<br>
 <br>
 <br>
 <br>
